soroban-sdk/tests/trybuild/contractfile_with_sha256_verify_fail.stderr
error: sha256 does not match, expected: 26f5c00d05439950c7edbfcc1f2bd47f383094b2105f8473168407636b050258
 --> tests/trybuild/contractfile_with_sha256_verify_fail.rs:3:5
  |
3 |     sha256 = "0000000000000000000000000000000000000000000000000000000000000000",
  |     ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/trybuild/contractfile_with_sha256_verify_fail.rs:4:3
  |
4 | );
  |   ^ consider adding a `main` function to `$DIR/tests/trybuild/contractfile_with_sha256_verify_fail.rs`
